# py-2048

./: README.md  pyproject.toml
py_2048/: __init__.py  board.py  cli.py
tests/: test_board.py
